# simple_scrapper

./: pyproject.toml  scrapper.py
.env/: pyvenv.cfg
