[tool.poetry]
name = "y"
version = "0.1.0"
description = ""
authors = ["Raina Unzhurna <50578571+inspira-raina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^1.5.2"
sqlalchemy = "^1.4.46"
python-slugify = "^7.0.0"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
